--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,13 +11,12 @@
 </head>
 
 <body
-    class="flex min-h-screen justify-center items-center flex-col bg-gradient-to-b via-green-200 to-blue-300 from-yellow-200">
     <section>
         <h1 class>Is Nerando Done Yet?</h1>
         <h3 class="text-5xl font-bold">14.2%</h3>
         <p>A simple challenge from friends to Nerando to help him grow.</p>
     </section>
-    <section>
+    <!-- <section>
         <h2 class="text-5xl font-bold">14.2%</h2>
         <div class="mt-10 text-2xl text-center">
             <h2 class="text-3xl">Stuff to do for 2022</h2>
@@ -39,25 +37,50 @@
             <li> Progress Update ( April 1,2022) : Created a list of talks on <a href="https://sessionize.com/Nerajno"
                     target="_blank" rel="noopener noreferrer">Sessionize.</a></li>
         </ul>
-    </section>
+    </section> -->
     <section>
-        <div class="accordion" id="accordionExample">
+        <div class="accordion" id="accordionBlock">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  Conference Talks
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                  Progress 
                 </button>
               </h2>
-              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+              <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse
+                  plugin adds the appropriate
+                  classes that we use to style each element. These classes control the overall appearance, as well as
+                  the showing and hiding via
+                  CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's
+                  also worth noting that just
+                  about any HTML can go within the <code>.accordion-body</code>, though the transition does limit
+                  overflow.
+                  <p> Progress Update ( August 12,2022) : Updated a list of talks on <a
+                      href="https://www.papercall.io/speakers/45142" target="_blank"
+                      rel="noopener noreferrer">PaperCall.</a></p>
+                  <p> Progress Update ( April 28, 2022) : Talk accepted to <a href="https://www.magnoliajs.com/"
+                      target="_blank" rel="noopener noreferrer">Magnoliajs</a> </p>
+                  <p> Progress Update ( July, 3 2022) : Talk accepted to <a href="https://www.https://www.refactr.tech/"
+                      target="_blank" rel="noopener noreferrer">Refactr</a> </p>
+                  <p> Progress Update ( July, 30 2022) : Talk accepted to <a href="https://www.atldevcon.com/"
+                      target="_blank" rel="noopener noreferrer">AtlDevCon 2022</a> </p>
+                  <p> Progress Update ( Aug 13, 2022) : Talk accepted to <a href="https://www.prairiedevcon.com/"
+                      target="_blank" rel="noopener noreferrer">Prairie Dev Con</a> </p>
+                  <p> Progress Update ( Sept 25, 2022) : Spoke at <a href="https://www.magnoliajs.com/" target="_blank"
+                      rel="noopener noreferrer">Magnoliajs</a>,
+                    <a href="https://www.magnoliajs.com/" target="_blank" rel="noopener noreferrer">Magnoliajs</a> and
+                    <a href="https://www.atldevcon.com/" target="_blank" rel="noopener noreferrer">AtlDevCon 2022</a>
+                    in the week of September 11 -17, 2022.</p>
+                  <p>Progress Update ( Sept 25, 2022) : Speaking at <a href="https://www.meetup.com/atlantajug/"
+                      target="_blank" rel="noopener noreferrer">ATLJUG</a> </p>
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                  Articles
+                 Conferences/Talks => 5/7
                 </button>
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -69,7 +92,19 @@
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  Projects
+                  Projects => 1/7
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Articles => 1/7
                 </button>
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
@@ -80,24 +115,6 @@
             </div>
           </div>
     </section>
-
-    <p> Progress Update ( August 12,2022) : Updated a list of talks on <a href="https://www.papercall.io/speakers/45142"
-            target="_blank" rel="noopener noreferrer">PaperCall.</a></p>
-    <p> Progress Update ( April 28, 2022) : Talk accepted to <a href="https://www.magnoliajs.com/" target="_blank"
-            rel="noopener noreferrer">Magnoliajs</a> </p>
-    <p> Progress Update ( July, 3 2022) : Talk accepted to <a href="https://www.https://www.refactr.tech/"
-            target="_blank" rel="noopener noreferrer">Refactr</a> </p>
-    <p> Progress Update ( July, 30 2022) : Talk accepted to <a href="https://www.atldevcon.com/" target="_blank"
-            rel="noopener noreferrer">AtlDevCon 2022</a> </p>
-    <p> Progress Update ( Aug 13, 2022) : Talk accepted to <a href="https://www.prairiedevcon.com/" target="_blank"
-            rel="noopener noreferrer">Prairie Dev Con</a> </p>
-    <p> Progress Update ( Sept 25, 2022) : Spoke at <a href="https://www.magnoliajs.com/" target="_blank"
-            rel="noopener noreferrer">Magnoliajs</a>,
-        <a href="https://www.magnoliajs.com/" target="_blank" rel="noopener noreferrer">Magnoliajs</a> and <a
-            href="https://www.atldevcon.com/" target="_blank" rel="noopener noreferrer">AtlDevCon 2022</a>
-        in the week of September 11 -17, 2022.</p>
-    <p>Progress Update ( Sept 25, 2022) : Speaking at <a href="https://www.meetup.com/atlantajug/" target="_blank"
-            rel="noopener noreferrer">ATLJUG</a> </p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
