redesign  && added navbar

--- a/index.html
+++ b/index.html
@@ -16,28 +16,20 @@
         <h3 class="text-5xl font-bold">14.2%</h3>
         <p>A simple challenge from friends to Nerando to help him grow.</p>
     </section>
-    <!-- <section>
-        <h2 class="text-5xl font-bold">14.2%</h2>
-        <div class="mt-10 text-2xl text-center">
-            <h2 class="text-3xl">Stuff to do for 2022</h2>
-            <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
-                <li class="p-20 text-center shadow-lg rounded-xl bg-white">
-                    <div class="text-4xl font-bold">4/7</div> Talks
-                </li>
-                <li class="p-20 text-center shadow-lg rounded-xl bg-white">
-                    <div class="text-4xl font-bold">0/7</div> Completed<br />Projects
-                </li>
-                <li class="p-20 text-center shadow-lg rounded-xl bg-white">
-                    <div class="text-4xl font-bold">0/7</div> Articles
-                </li>
-            </ul>
-    </section>
-    <section>
-        <ul class="list-inside ...">
-            <li> Progress Update ( April 1,2022) : Created a list of talks on <a href="https://sessionize.com/Nerajno"
-                    target="_blank" rel="noopener noreferrer">Sessionize.</a></li>
-        </ul>
-    </section> -->
+    <ul class="nav justify-content-end">
+      <li class="nav-item">
+        <a class="nav-link active" href="#">Active</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </li>
+    </ul>
     <section>
         <div class="accordion" id="accordionBlock">
             <div class="accordion-item">
