--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Is Nerando Done Yet?</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/@coreui/coreui@4.2.0/dist/css/coreui.min.css" rel="stylesheet" integrity="sha384-UkVD+zxJKGsZP3s/JuRzapi4dQrDDuEf/kHphzg8P3v8wuQ6m9RLjTkPGeFcglQU" crossorigin="anonymous">
     <link rel="stylesheet" href="./app.css">
 </head>
 
@@ -40,66 +41,60 @@
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse
-                  plugin adds the appropriate
-                  classes that we use to style each element. These classes control the overall appearance, as well as
-                  the showing and hiding via
-                  CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's
-                  also worth noting that just
-                  about any HTML can go within the <code>.accordion-body</code>, though the transition does limit
-                  overflow.
-                  <p> Progress Update ( August 12,2022) : Updated a list of talks on <a
+                  <p> <strong> Update ( August 12,2022) :</strong> Updated a list of talks on <a
                       href="https://www.papercall.io/speakers/45142" target="_blank"
                       rel="noopener noreferrer">PaperCall.</a></p>
-                  <p> Progress Update ( April 28, 2022) : Talk accepted to <a href="https://www.magnoliajs.com/"
+                  <p> <strong> Update ( April 28, 2022) :</strong> Talk accepted to <a href="https://www.magnoliajs.com/"
                       target="_blank" rel="noopener noreferrer">Magnoliajs</a> </p>
-                  <p> Progress Update ( July, 3 2022) : Talk accepted to <a href="https://www.https://www.refactr.tech/"
+                  <p> <strong> Update ( July, 3 2022) :</strong> Talk accepted to <a href="https://www.https://www.refactr.tech/"
                       target="_blank" rel="noopener noreferrer">Refactr</a> </p>
-                  <p> Progress Update ( July, 30 2022) : Talk accepted to <a href="https://www.atldevcon.com/"
+                  <p> <strong> Update ( July, 30 2022) :</strong>  Talk accepted to <a href="https://www.atldevcon.com/"
                       target="_blank" rel="noopener noreferrer">AtlDevCon 2022</a> </p>
-                  <p> Progress Update ( Aug 13, 2022) : Talk accepted to <a href="https://www.prairiedevcon.com/"
-                      target="_blank" rel="noopener noreferrer">Prairie Dev Con</a> </p>
-                  <p> Progress Update ( Sept 25, 2022) : Spoke at <a href="https://www.magnoliajs.com/" target="_blank"
-                      rel="noopener noreferrer">Magnoliajs</a>,
-                    <a href="https://www.magnoliajs.com/" target="_blank" rel="noopener noreferrer">Magnoliajs</a> and
+                  <p> <strong> Update ( Aug 13, 2022) :</strong> Talk accepted to <a href="https://www.prairiedevcon.com/"
+                      target="_blank" rel="noopener noreferrer">Prairie Dev Con (Turned it down to speak at ConnectTech2022)</a> </p>
+                  <p> <strong> Update ( Sept 25, 2022) :</strong> Spoke at <a href="https://www.magnoliajs.com/" target="_blank"
+                      rel="noopener noreferrer">MagnoliaJs</a>,
+                    <a href="https://www.refactr.tech/" target="_blank" rel="noopener noreferrer">Refactr.Tech</a> and
                     <a href="https://www.atldevcon.com/" target="_blank" rel="noopener noreferrer">AtlDevCon 2022</a>
-                    in the week of September 11 -17, 2022.</p>
-                  <p>Progress Update ( Sept 25, 2022) : Speaking at <a href="https://www.meetup.com/atlantajug/"
+                    in the week of September 11-17, 2022.</p>
+                  <p><strong>Progress Update ( Sept 25, 2022) :</strong> Speaking at <a href="https://www.meetup.com/atlantajug/"
                       target="_blank" rel="noopener noreferrer">ATLJUG</a> </p>
+                  <p><strong>Progress Update ( Nov 9, 2022) :</strong> Spoke at <a href="https://2022.connect.tech/"
+                        target="_blank" rel="noopener noreferrer">ConnectTech 2022</a> </p>
                 </div>
               </div>
             </div>
             <div class="accordion-item">
-              <h2 class="accordion-header" id="headingTwo">
+              <h2 class="accordion-header" id="conferences">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                  Conferences/Talks => 5/7
                 </button>
               </h2>
-              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="conferences" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                   <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
-              <h2 class="accordion-header" id="headingThree">
+              <h2 class="accordion-header" id="projects">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                   Projects => 1/7
                 </button>
               </h2>
-              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="projects" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                   <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
-              <h2 class="accordion-header" id="headingThree">
+              <h2 class="accordion-header" id="articles">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                   Articles => 1/7
                 </button>
               </h2>
-              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="articles" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                   <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
                 </div>
@@ -111,12 +106,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
-        integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous">
-    </script>
+    <link href="https://cdn.jsdelivr.net/npm/@coreui/coreui@4.2.0/dist/css/coreui.min.css" rel="stylesheet" integrity="sha384-UkVD+zxJKGsZP3s/JuRzapi4dQrDDuEf/kHphzg8P3v8wuQ6m9RLjTkPGeFcglQU" crossorigin="anonymous">
 </body>
 
 </html>
