--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h3 class="text-5xl font-bold">14.2%</h3>
         <p>A simple challenge from friends to Nerando to help him grow.</p>
     </section>
-    <ul class="nav justify-content-end">
+    <!-- <ul class="nav justify-content-end">
       <li class="nav-item">
         <a class="nav-link active" href="#">Active</a>
       </li>
@@ -30,7 +30,7 @@
       <li class="nav-item">
         <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </li>
-    </ul>
+    </ul> -->
     <section>
         <div class="accordion" id="accordionBlock">
             <div class="accordion-item">
